add diagnosis logic

--- a/luis/luisTest.ipynb
+++ b/luis/luisTest.ipynb
@@ -2,69 +2,135 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from luis_sdk import LUISClient\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getLUISCreds():\n",
+    "    credentials = json.load(open('../credentials.json'))\n",
+    "    luisCreds = credentials['cognitiveServices']['luis']\n",
+    "    return luisCreds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "luisCreds = getLUISCreds()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "luisClient = LUISClient(luisCreds['appID'], luisCreds['key'], True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getPrediction(text):\n",
+    "    luisClient = LUISClient(luisCreds['appID'], luisCreds['key'], True)\n",
+    "    res = luisClient.predict(text)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getIntent(res):\n",
+    "    return res.get_top_intent().get_name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getEntities(res):\n",
+    "    entities = []\n",
+    "    for entitity in res.get_entities():\n",
+    "        print(entitity.get_type() + \" : \" + entitity.get_name())\n",
+    "        entity = {entitity.get_type():entitity.get_name()}\n",
+    "        entities.append(entity)\n",
+    "    return entities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = getPrediction(\"What is rabies\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'medical.getDescription'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getIntent(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter your app Id:\n",
-      "615f4aac-1ef3-486e-ad51-9b7007cfb7bb\n",
-      "Please input your subscription key:\n",
-      "4c1272f7e91642dea4eaba030886f465\n",
-      "Please input the text to predict:\n",
-      "what is rabies\n",
-      "---------------------------------------------\n",
-      "LUIS Response: \n",
-      "Query: what is rabies\n",
-      "Top Scoring Intent: medical.getDescription\n",
-      "Entities:\n",
-      "\"rabies\":\n",
-      "Type: diseaseName, Score: 0.8774258\n"
+      "diseaseName : rabies\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'diseaseName': 'rabies'}]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from luis_sdk import LUISClient\n",
-    "\n",
-    "def process_res(res):\n",
-    "    '''\n",
-    "    A function that processes the luis_response object and prints info from it.\n",
-    "    :param res: A LUISResponse object containing the response data.\n",
-    "    :return: None\n",
-    "    '''\n",
-    "    print('---------------------------------------------')\n",
-    "    print('LUIS Response: ')\n",
-    "    print('Query: ' + res.get_query())\n",
-    "    print('Top Scoring Intent: ' + res.get_top_intent().get_name())\n",
-    "    if res.get_dialog() is not None:\n",
-    "        if res.get_dialog().get_prompt() is None:\n",
-    "            print('Dialog Prompt: None')\n",
-    "        else:\n",
-    "            print('Dialog Prompt: ' + res.get_dialog().get_prompt())\n",
-    "        if res.get_dialog().get_parameter_name() is None:\n",
-    "            print('Dialog Parameter: None')\n",
-    "        else:\n",
-    "            print('Dialog Parameter Name: ' + res.get_dialog().get_parameter_name())\n",
-    "        print('Dialog Status: ' + res.get_dialog().get_status())\n",
-    "    print('Entities:')\n",
-    "    for entity in res.get_entities():\n",
-    "        print('\"%s\":' % entity.get_name())\n",
-    "        print('Type: %s, Score: %s' % (entity.get_type(), entity.get_score()))\n",
-    "\n",
-    "try:\n",
-    "    APPID = input('Please enter your app Id:\\n')\n",
-    "    APPKEY = input('Please input your subscription key:\\n')\n",
-    "    TEXT = input('Please input the text to predict:\\n')\n",
-    "    CLIENT = LUISClient(APPID, APPKEY, True)\n",
-    "    res = CLIENT.predict(TEXT)\n",
-    "    while res.get_dialog() is not None and not res.get_dialog().is_finished():\n",
-    "        TEXT = input('%s\\n'%res.get_dialog().get_prompt())\n",
-    "        res = CLIENT.reply(TEXT, res)\n",
-    "    process_res(res)\n",
-    "except Exception as exc:\n",
-    "    print(exc)"
+    "getEntities(a)"
    ]
   },
   {
