--- a/luis/luisHelper.ipynb
+++ b/luis/luisHelper.ipynb
@@ -1,18 +1,65 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 24,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from luis_sdk import LUISClient\n",
-    "import json"
+    "# Library Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from luis_sdk import LUISClient\n",
+    "import json\n",
+    "from pprint import pprint"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Global Variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "luisCreds = getLUISCreds()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "luisClient = LUISClient(luisCreds['appID'], luisCreds['key'], True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Helper Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Credentials Function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,26 +70,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "luisCreds = getLUISCreds()"
+    "### Intent and Entities Functions:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "luisClient = LUISClient(luisCreds['appID'], luisCreds['key'], True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,6 +111,25 @@
     "        entity = {entitity.get_type():entitity.get_name()}\n",
     "        entities.append(entity)\n",
     "    return entities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getIntentAndEntities(text):\n",
+    "    result = getPrediction(text)\n",
+    "    pprint(result)\n",
+    "    intent = getIntent(result)\n",
+    "    pprint(intent)\n",
+    "    entities = getEntities(result)\n",
+    "    pprint(entities)\n",
+    "    result = {\"intent\" : intent,\n",
+    "              \"entities\" : entities\n",
+    "             }\n",
+    "    return result"
    ]
   }
  ],
