--- a/main/lib/luisHelper/luisHelper.ipynb
+++ b/main/lib/luisHelper/luisHelper.ipynb
@@ -1,18 +1,65 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 38,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from luis_sdk import LUISClient\n",
-    "import json"
+    "# Library Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from luis_sdk import LUISClient\n",
+    "import json\n",
+    "from pprint import pprint"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Global Variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "luisCreds = getLUISCreds()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "luisClient = LUISClient(luisCreds['appID'], luisCreds['key'], True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Helper Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Credentials Function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,26 +70,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 40,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "luisCreds = getLUISCreds()"
+    "### Intent and Entities Functions:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "luisClient = LUISClient(luisCreds['appID'], luisCreds['key'], True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,66 +115,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = getPrediction(\"What is rabies\")"
+    "def getIntentAndEntities(text):\n",
+    "    result = getPrediction(text)\n",
+    "    pprint(result)\n",
+    "    intent = getIntent(result)\n",
+    "    pprint(intent)\n",
+    "    entities = getEntities(result)\n",
+    "    pprint(entities)\n",
+    "    result = {\"intent\" : intent,\n",
+    "              \"entities\" : entities\n",
+    "             }\n",
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'medical.getDescription'"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "getIntent(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "diseaseName : rabies\n"
+      "<luis_sdk.luis_response.LUISResponse object at 0x000001FF392A1EF0>\n",
+      "'medical.getDescription'\n",
+      "'medical.getDescription'\n",
+      "diseaseName : rabies\n",
+      "[{'diseaseName': 'rabies'}]\n",
+      "[{'diseaseName': 'rabies'}]\n",
+      "{'entities': [{'diseaseName': 'rabies'}], 'intent': 'medical.getDescription'}\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'diseaseName': 'rabies'}]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "getEntities(a)"
+    "res = getIntentAndEntities('what is rabies')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
