--- a/testing/face/faceRegistration.ipynb
+++ b/testing/face/faceRegistration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "import cognitive_face as CF\n",
     "from pprint import pprint\n",
     "from pathlib import Path\n",
-    "from pymongo import MongoClient"
+    "from pymongo import MongoClient\n",
+    "from pymongo import ReturnDocument"
    ]
   },
   {
@@ -27,25 +28,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def captureImages():\n",
+    "def captureTrainingImages():\n",
+    "    path = Path('trainingImages')\n",
     "    # Note: The captured images must be named face**.jpeg; \n",
+    "    # These files must be stored in \"./trainingImages\"\n",
     "    # Where ** represents numbers ranging from 00 to 10\n",
     "    # We need to get eleven images to train the model\n",
-    "    pprint(\"Images captured!\")"
+    "    pprint(\"Images captured!\")\n",
+    "    return(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
     "def getFaceDetectURL(faceCreds):\n",
     "    return(faceCreds['endPoint'] + '/detect')\n",
+    "\n",
+    "def getFaceIdentifyURL(faceCreds):\n",
+    "    return(faceCreds['endPoint'] + '/identify')\n",
     "\n",
     "def getPersonGroupURL(faceCreds):\n",
     "    return(faceCreds['endPoint'] + '/persongroups')"
@@ -123,14 +130,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
     "def getFaceDetails(res):\n",
-    "    faceId = res.json()['faceId']\n",
-    "    noiseLevel = res.json()['noise']['noiseLevel']\n",
-    "    blurLevel = res.json()['blur']['blurLevel']\n",
+    "    faceId = res.json()[0]['faceId']\n",
+    "    noiseLevel = res.json()[0]['faceAttributes']['noise']['noiseLevel']\n",
+    "    blurLevel = res.json()[0]['faceAttributes']['blur']['blurLevel']\n",
     "#     all attributes not necessary; for extra functionality later:\n",
     "    return({\n",
     "        \"faceId\" : faceId,\n",
@@ -141,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +167,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = getFaceId()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +260,7 @@
     "    if(req.status_code == 200):\n",
     "        print(\"Success\")\n",
     "    else:\n",
-    "        print(\"Something went wrong\")\n",
+    "        print(\"Something went wrong with listing person groups\")\n",
     "    return(req)"
    ]
   },
@@ -270,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,11 +296,11 @@
     "    headers = createHeaders(key, 'json')\n",
     "    url = getPersonGroupURL(faceCreds)\n",
     "    fullURL = url + '/' + personGroupId + '/train'\n",
-    "    req = requests.get(url=fullURL, headers=headers)\n",
+    "    req = requests.post(url=fullURL, headers=headers)\n",
     "    if(req.status_code == 202):\n",
     "        print(\"Training has begun\")\n",
     "    else:\n",
-    "        print(\"Something went wrong\")\n",
+    "        print(\"Something went wrong with training the group\")\n",
     "        print(req.json()['error']['message'])\n",
     "    return(req)"
    ]
@@ -359,6 +375,7 @@
     "        \"personId\" : personId\n",
     "    }\n",
     "    result = patientCollection.insert_one(dbEntry)\n",
+    "    print(\"Person stored successfully\")\n",
     "    return(result)"
    ]
   },
@@ -368,33 +385,275 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# result = savePersonId(\"hospital_department\", \"chirag\", \"00134c21-4094-410b-91be-bf52e34f251b\")"
+    "result = savePersonId(\"hospital_department\", \"chirag\", \"00134c21-4094-410b-91be-bf52e34f251b\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def addPersonFace(file, personGroupId, personId):\n",
+    "    faceCreds = getFaceAPICreds()\n",
+    "    key = getFaceKey(faceCreds)\n",
+    "    headers = createHeaders(key, 'octet-stream')\n",
+    "    url = getPersonGroupURL(faceCreds)\n",
+    "    fullURL = url + '/' + personGroupId + '/persons/' + personId + '/persistedFaces'\n",
+    "    body = file.read_bytes()\n",
+    "    req = requests.post(url=fullURL, data=body, headers=headers)\n",
+    "    print(\"Response: \" + str(req.status_code) + \"; Persisted Face ID: \" + req.json()['persistedFaceId'])\n",
+    "    if(req.status_code != 200):\n",
+    "        print(\"Error: \" + pprint(req.json()))\n",
+    "    else:\n",
+    "        print(\"Success\")\n",
+    "        pprint(req.json())\n",
+    "    return(req)\n",
+    "# {'persistedFaceId': '00a07369-b34c-490b-ba2d-c5d9c2a073dd'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def storePersistedFaceId(persistedFaces, personId):\n",
+    "    client = getClient()\n",
+    "    patientCollection = getPatients(client)\n",
+    "    returnedDoc = patientCollection.find_one_and_update(filter={\"personId\":personId}, update={\"$set\" : {\"persistedFaces\" : persistedFaces}}, upsert=True, return_document=ReturnDocument.AFTER)\n",
+    "    pprint(returnedDoc)\n",
+    "    return(returnedDoc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def addFaces(personGroupId, personId):\n",
+    "    p = Path('trainingImages')\n",
+    "    # res = addPersonFace(p, \"hospital_department\", \"7234cf7b-2b27-43a7-8fd9-36e131e2fb41\")\n",
+    "    persistedFaces = []\n",
+    "    for file in p.glob(\"*.jpg\"):\n",
+    "        res = addPersonFace(file=file, personGroupId=personGroupId, personId=personId)\n",
+    "        persistedFaceId = res.json()['persistedFaceId']\n",
+    "        persistedFaces.append(persistedFaceId)\n",
+    "    pprint(storePersistedFaceId(persistedFaces, \"7234cf7b-2b27-43a7-8fd9-36e131e2fb41\"))\n",
+    "    print(\"Faces have been stored\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "arzan\\image01.jpg\n",
-      "arzan\\image02.jpg\n",
-      "arzan\\image03.jpg\n",
-      "arzan\\image04.jpg\n",
-      "arzan\\image05.jpg\n",
-      "arzan\\image06.jpg\n"
+      "Training has begun\n"
      ]
     }
    ],
    "source": [
-    "p = Path('./arzan')\n",
-    "for file in p.glob('*.jpg'):\n",
-    "    image = open('file', 'rb')\n",
-    "    addPersonFace(image, personGroupId, personId)\n",
-    "    "
+    "a = trainPersonGroup('hospital_department')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "succeeded\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = getPersonGroupTrainingStatus('hospital_department')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def moveImages():\n",
+    "    print(\"Add moving image file code here\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current file name is: \n",
+      "trainingImages\\IMG_20171130_192100.jpg\n",
+      "Current file name is: \n",
+      "trainingImages\\IMG_20171130_192103.jpg\n",
+      "Current file name is: \n",
+      "trainingImages\\IMG_20171130_192104.jpg\n",
+      "Current file name is: \n",
+      "trainingImages\\IMG_20171130_192105.jpg\n",
+      "Current file name is: \n",
+      "trainingImages\\IMG_20171130_192111.jpg\n",
+      "Current file name is: \n",
+      "trainingImages\\IMG_20171130_192118.jpg\n",
+      "Current file name is: \n",
+      "trainingImages\\IMG_20171130_192121.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = Path('./trainingImages/')\n",
+    "a= renameImages(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'Images captured!'\n",
+      "Add moving image file code here\n",
+      "Success\n",
+      "{'personId': '666863ac-f0a9-49ed-8b50-c5201a2004e1'}\n",
+      "Stored in DB\n",
+      "Response from createPerson is: \n",
+      "{'personId': '666863ac-f0a9-49ed-8b50-c5201a2004e1'}\n",
+      "Created person!\n",
+      "{'_id': ObjectId('5a24f9b335993642607a5b24'),\n",
+      " 'name': 'arzan',\n",
+      " 'persistedFaces': [],\n",
+      " 'personGroupId': 'hospital_department',\n",
+      " 'personId': '7234cf7b-2b27-43a7-8fd9-36e131e2fb41'}\n",
+      "{'_id': ObjectId('5a24f9b335993642607a5b24'),\n",
+      " 'name': 'arzan',\n",
+      " 'persistedFaces': [],\n",
+      " 'personGroupId': 'hospital_department',\n",
+      " 'personId': '7234cf7b-2b27-43a7-8fd9-36e131e2fb41'}\n",
+      "Faces have been stored\n",
+      "Added faces!\n",
+      "Training has begun\n",
+      "Initiated training of group\n",
+      "Count #0\n",
+      "succeeded\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = registerPatient('hospital_department', 'sudhakar', 'none')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def registerPatient(personGroupId, name, userData):\n",
+    "    path = captureTrainingImages()\n",
+    "#     renameImages(path)\n",
+    "    moveImages()\n",
+    "    response = createPerson(personGroupId, name, userData)\n",
+    "    print(\"Response from createPerson is: \")\n",
+    "    pprint(response.json())\n",
+    "    print(\"Created person!\")\n",
+    "    addFaces(personGroupId, response.json()['personId'])\n",
+    "    print(\"Added faces!\")\n",
+    "    trainPersonGroup(personGroupId=personGroupId)\n",
+    "    print(\"Initiated training of group\")\n",
+    "    retries = 4\n",
+    "    count = 0\n",
+    "    flag = False\n",
+    "    while(flag!=True):\n",
+    "        print(\"Count #\" + str(count))\n",
+    "        if(count>retries):\n",
+    "            print(\"Training has commenced but did not finish in the stipulated time. Check again later.\")\n",
+    "            flag = True\n",
+    "        req = getPersonGroupTrainingStatus(personGroupId)\n",
+    "        req = req.json()\n",
+    "        if(req['status'] != 'succeeded'):\n",
+    "            if(req['status'] == 'failed'):\n",
+    "                print(\"Training failed\")\n",
+    "                return(False)\n",
+    "            elif(req['status'] == 'running'):\n",
+    "                print(\"Training is on going. Stand by.\")\n",
+    "                count = count + 1\n",
+    "                time.sleep(1)\n",
+    "            elif(req['status'] == 'notstarted'):\n",
+    "                print(\"Training is yet to begin. Stand by.\")\n",
+    "                count = count + 1\n",
+    "                time.sleep(2)\n",
+    "            else:\n",
+    "                print(\"Training complete!\")\n",
+    "                flag = True\n",
+    "                return(True)\n",
+    "        else:\n",
+    "            flag = True\n",
+    "            return(True)\n",
+    "    return(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def captureImage():\n",
+    "    # Take a single photo here and rename it as \"target.jpg\"\n",
+    "    print(\"Capturing image\")\n",
+    "    flag = True\n",
+    "    if(flag):\n",
+    "        print(\"Image captured!\")\n",
+    "        return(True)\n",
+    "    else:\n",
+    "        print(\"Image capture failed\")\n",
+    "        return(False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def identifyPatient(personGroupId):\n",
+    "    if(captureImage()):\n",
+    "        print(\"Image prepping for analysis\")\n",
+    "    else:\n",
+    "        print(\"Image capture failed\")\n",
+    "        return(False)\n",
+    "    faceIds = []\n",
+    "    faceId = getFaceId()\n",
+    "    faceIds.append(faceId)\n",
+    "    faceCreds = getFaceAPICreds()\n",
+    "    key = getFaceKey(faceCreds)\n",
+    "    url = getFaceIdentifyURL(faceCreds)\n",
+    "    headers = createHeaders(key, 'json')\n",
+    "    body = {\n",
+    "        \"faceIds\" : faceIds,\n",
+    "        \"personGroupId\" : personGroupId,\n",
+    "        \"maxNumOfCandidatesReturned\" : 1,\n",
+    "        \"confidenceThreshold\" : 0.7\n",
+    "    }\n",
+    "    req = requests.post(url=url, headers=headers, json=body)\n",
+    "    return(req)"
    ]
   },
   {
