--- a/testing/face/faceRegistration.ipynb
+++ b/testing/face/faceRegistration.ipynb
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,123 +440,19 @@
     "        res = addPersonFace(file=file, personGroupId=personGroupId, personId=personId)\n",
     "        persistedFaceId = res.json()['persistedFaceId']\n",
     "        persistedFaces.append(persistedFaceId)\n",
-    "    pprint(storePersistedFaceId(persistedFaces, \"7234cf7b-2b27-43a7-8fd9-36e131e2fb41\"))\n",
+    "    pprint(storePersistedFaceId(persistedFaces, personId))\n",
+    "    pprint(persistedFaces)\n",
     "    print(\"Faces have been stored\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training has begun\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = trainPersonGroup('hospital_department')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "succeeded\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = getPersonGroupTrainingStatus('hospital_department')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
     "def moveImages():\n",
     "    print(\"Add moving image file code here\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 196,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current file name is: \n",
-      "trainingImages\\IMG_20171130_192100.jpg\n",
-      "Current file name is: \n",
-      "trainingImages\\IMG_20171130_192103.jpg\n",
-      "Current file name is: \n",
-      "trainingImages\\IMG_20171130_192104.jpg\n",
-      "Current file name is: \n",
-      "trainingImages\\IMG_20171130_192105.jpg\n",
-      "Current file name is: \n",
-      "trainingImages\\IMG_20171130_192111.jpg\n",
-      "Current file name is: \n",
-      "trainingImages\\IMG_20171130_192118.jpg\n",
-      "Current file name is: \n",
-      "trainingImages\\IMG_20171130_192121.jpg\n"
-     ]
-    }
-   ],
-   "source": [
-    "path = Path('./trainingImages/')\n",
-    "a= renameImages(path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 208,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'Images captured!'\n",
-      "Add moving image file code here\n",
-      "Success\n",
-      "{'personId': '666863ac-f0a9-49ed-8b50-c5201a2004e1'}\n",
-      "Stored in DB\n",
-      "Response from createPerson is: \n",
-      "{'personId': '666863ac-f0a9-49ed-8b50-c5201a2004e1'}\n",
-      "Created person!\n",
-      "{'_id': ObjectId('5a24f9b335993642607a5b24'),\n",
-      " 'name': 'arzan',\n",
-      " 'persistedFaces': [],\n",
-      " 'personGroupId': 'hospital_department',\n",
-      " 'personId': '7234cf7b-2b27-43a7-8fd9-36e131e2fb41'}\n",
-      "{'_id': ObjectId('5a24f9b335993642607a5b24'),\n",
-      " 'name': 'arzan',\n",
-      " 'persistedFaces': [],\n",
-      " 'personGroupId': 'hospital_department',\n",
-      " 'personId': '7234cf7b-2b27-43a7-8fd9-36e131e2fb41'}\n",
-      "Faces have been stored\n",
-      "Added faces!\n",
-      "Training has begun\n",
-      "Initiated training of group\n",
-      "Count #0\n",
-      "succeeded\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = registerPatient('hospital_department', 'sudhakar', 'none')"
    ]
   },
   {
@@ -658,10 +554,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Capturing image\n",
+      "Image captured!\n",
+      "Image prepping for analysis\n"
+     ]
+    }
+   ],
+   "source": [
+    "personGroupId = 'hospital_department'\n",
+    "a = identifyPatient(personGroupId)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'candidates': [{'confidence': 0.94883,\n",
+       "    'personId': 'b7afffa0-df2e-4256-b2a8-b758f0a107bc'}],\n",
+       "  'faceId': 'e1c8dfcd-feff-4aa8-a3bf-4c25e1593b5a'}]"
+      ]
+     },
+     "execution_count": 215,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def face(intentAndEntity):\n",
+    "    intent = intentAndEntity['intent']"
+   ]
   }
  ],
  "metadata": {
